Feat: add item detail retrieval functionality